@@ -29,8 +29,8 @@ package org.hisp.dhis.tracker.imports.config;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import org.hisp.dhis.tracker.imports.preheat.supplier.ClassBasedSupplier;
+import org.hisp.dhis.tracker.imports.preheat.supplier.CurrentUserSupplier;
 import org.hisp.dhis.tracker.imports.preheat.supplier.DefaultsSupplier;
 import org.hisp.dhis.tracker.imports.preheat.supplier.DuplicateRelationshipSupplier;
 import org.hisp.dhis.tracker.imports.preheat.supplier.EnrollmentsWithAtLeastOneEventSupplier;
@@ -65,6 +65,7 @@ public class TrackerPreheatConfig {
           ProgramOwnerSupplier.class,
           PeriodTypeSupplier.class,
           UniqueAttributesSupplier.class,
+          CurrentUserSupplier.class,
           UserSupplier.class,
           UsernameValueTypeSupplier.class,
           FileResourceSupplier.class,
@@ -74,7 +75,7 @@ public class TrackerPreheatConfig {
 
   @Bean("preheatOrder")
   public List<String> getPreheatOrder() {
-    return preheatOrder.stream().map(Class::getSimpleName).collect(Collectors.toList());
+    return preheatOrder.stream().map(Class::getSimpleName).toList();
   }
 
   @Bean("preheatStrategies")
